--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "outlook-ical-proxy",
   "version": "1.0.0",
   "description": "",
   "main": "dist/src/functions/*.js",
@@ -9,15 +9,23 @@
     "clean": "rimraf dist",
     "prestart": "npm run clean && npm run build",
     "start": "func start",
+    "lint": "eslint ./src",
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0"
+    "@azure/functions": "^4.0.0",
+    "@azure/identity": "^4.2.0",
+    "@azure/keyvault-secrets": "^4.8.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.2.0",
+    "@types/node": "20.x",
     "azure-functions-core-tools": "^4.x",
-    "@types/node": "18.x",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.2.0",
+    "rimraf": "^5.0.0",
     "typescript": "^4.0.0",
-    "rimraf": "^5.0.0"
+    "typescript-eslint": "^7.8.0"
   }
 }
