--- a/package.json
+++ b/package.json
@@ -13,13 +13,11 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0",
-    "@azure/identity": "^4.2.0",
-    "@azure/keyvault-secrets": "^4.8.0"
+    "@azure/functions": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
-    "@types/node": "20.x",
+    "@types/node": "^20.12.11",
     "azure-functions-core-tools": "^4.x",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
